--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
                     <div class="card">
-                        <img src="./img/app 44.jpg" class="card-img-top" alt="...">
+                        <img src="./img/app 44.jpg" class="card-img-top" alt="..." style="width: 400px; height: 400px; object-fit: cover;">
                         <div class="card-body">
                             <h5 class="card-subtitle">Doctor Appoitment App</h5>
                             <p class="card-text">Doctor Appoitment App</p>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
                     <div class="card">
-                        <img src="./img/app 4.jpg" class="card-img-top" alt="...">
+                        <img src="./img/app 4.jpg" class="card-img-top" alt="..." style="width: 400px; height: 400px; object-fit: cover;">
                         <div class="card-body">
                             <h5 class="card-subtitle">Coffee Shop </h5>
                             <p class="card-text">One of the best coffee shop App</p>
