--- a/portfolio.html
+++ b/portfolio.html
@@ -68,48 +68,60 @@
     </section>
     <!-- breadcrumb section -->
 
-    <!-- portfolio section -->
-    <section class="bg-light">
-        <div class="container py-5">
-            <div class="row mb-4">
-                <div class="col text-center">
-                    <h2 class="display-4">Portfolio</h2>
-                    <p class="">Some Projects</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="card">
-                        <img src="./img/app 44.jpg" class="card-img-top" alt="..." style="width: 400px; height: 400px; object-fit: cover;">
-                        <div class="card-body">
-                            <h5 class="card-subtitle">Doctor Appoitment App</h5>
-                            <p class="card-text">Doctor Appoitment App</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="card">
-                        <img src="./img/app 4.jpg" class="card-img-top" alt="..." style="width: 400px; height: 400px; object-fit: cover;">
-                        <div class="card-body">
-                            <h5 class="card-subtitle">Coffee Shop </h5>
-                            <p class="card-text">One of the best coffee shop App</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="card">
-                        <img src="./img/bg.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-subtitle">Project 3</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
-                            <a href="#" class="btn btn-primary">View</a>
-                        </div>
-                    </div>
-                </div> -->
+ <!-- project categories section -->
+ <section class="py-5">
+    <div class="container">
+        <div class="row mb-4">
+            <div class="col text-center">
+                <h2 class="display-4">Project</h2>
             </div>
         </div>
-    </section>
-    <!-- portfolio section -->
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active" data-bs-toggle="tab" href="#uiuxDesign">UI/UX Design</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-bs-toggle="tab" href="#website">Website</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-bs-toggle="tab" href="#portfolio">Portfolio</a>
+            </li>
+        </ul>
+        <div class="tab-content mt-4">
+            <div class="tab-pane fade show active" id="uiuxDesign">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
+                        <div class="card">
+                            <img src="./img/app 44.jpg" class="card-img-top" alt="..." style="width: 400px; height: 400px; object-fit: cover;">
+                            <div class="card-body">
+                                <h5 class="card-subtitle">Doctor Appointment App</h5>
+                                <p class="card-text">Doctor Appointment App</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Add more cards for UI/UX Design projects here -->
+                </div>
+            </div>
+            <div class="tab-pane fade" id="uiuxDesign">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
+                        <div class="card">
+                            <img src="./img/app 4.jpg" class="card-img-top" alt="..." style="width: 400px; height: 400px; object-fit: cover;">
+                            <div class="card-body">
+                                <h5 class="card-subtitle">Coffee Shop</h5>
+                                <p class="card-text">Coffee Shop</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Add more cards for Website projects here -->
+                </div>
+            </div>
+           
+        </div>
+    </div>
+</section>
+
+
 
 
 
