--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
                         in a team that entertains themselves and focuses on self-education.</p>
                 </div>
                 <div class="col-lg-6">
-                    <img src="img/JerushaLamsal.png" alt="About Me" class="img-fluid">
+                    <img src="img/jerushLamshal.png" alt="About Me" class="img-fluid">
                 </div>
             </div>
         </div>
