--- a/resume.html
+++ b/resume.html
@@ -86,11 +86,11 @@
                     <ul class="list-unstyled">
                         <li>
                             <h5>Bachelor of Information Technology</h5>
-                            <p>XYZ University, 2018 - 2022</p>
+                            <p>Gandaki University, 2021 - 2025</p>
                         </li>
                         <li>
                             <h5>Higher Secondary Education</h5>
-                            <p>ABC College, 2016 - 2018</p>
+                            <p>St.Mary's Higher Secondary School, 2017 - 2019</p>
                         </li>
                     </ul>
                 </div>
@@ -103,14 +103,14 @@
                     <hr>
                     <ul class="list-unstyled">
                         <li>
-                            <h5>Front-end Developer</h5>
-                            <p>XYZ Company, 2022 - Present</p>
+                            <h5>UI/UX Certified</h5>
+                            <p>XDezo Academy, 2024</p>
                             <p>Responsible for designing and implementing user interfaces for web applications.</p>
                         </li>
                         <li>
-                            <h5>Intern Developer</h5>
-                            <p>ABC Corporation, 2021 - 2022</p>
-                            <p>Assisted in the development and maintenance of the company website.</p>
+                            <h5>Intern</h5>
+                            <p>Virtual Technologies, 2025</p>
+                            <p>Assisted in the software testing and maintenance of the company's product.</p>
                         </li>
                     </ul>
                 </div>
@@ -155,7 +155,7 @@
                     <ul class="list-unstyled">
                         <li>
                             <h5>Porfolio</h5>
-                            <p>mplemented Personal Portfolio Website</p>
+                            <p>Implemented Personal Portfolio Website</p>
                         </li>
                         <li>
                             <h5>Online Food Ordering System</h5>
