--- a/skills.html
+++ b/skills.html
@@ -104,7 +104,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
                     <h5>Jerusha Lamsal </h5>
-                    <p> Hi, I'm Jerusha Lamsal , a UI/UX Designer from Pokhara, Nepal. I specialize in developing and
+                    <p> Hi, I'm Jerusha Lamsal , a UI/UX Designer and QA Engineer from Pokhara, Nepal. I specialize in developing and
                         designing, with a strong focus on learning new technologies and effective management. I excel in
                         researching innovative solutions and enjoy collaborative team environments.</p>
                 </div>
@@ -122,9 +122,9 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
                     <h5>Contact</h5>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-map-marker"></i> Address: Pokhara, Kaski, Nepal, 33700</li>
-                        <li><i class="fa fa-phone"></i> Phone: 9868000000</li>
-                        <li><i class="fa fa-envelope"></i> Email: jerusha@gmail.com</li>
+                        <li><i class="fa fa-map-marker"></i> Address:Gharipatan-07,Pokhara,Nepal,33700</li>
+                        <li><i class="fa fa-phone"></i> Phone: 98********</li>
+                        <li><i class="fa fa-envelope"></i> Email: jerushalamsal1@gmail.com</li>
                     </ul>
                 </div>
             </div>
@@ -136,7 +136,7 @@
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script>
         var typingEffect = new Typed(".multiText", {
-            strings: ["front-end developer", "coder", "designer", "UI/UX Designer"],
+            strings: ["Front-End Developer", "QA Engineer", "UI/UX Designer"],
             loop: true,
             typeSpeed: 100,
             backSpeed: 80,
