--- a/resume.html
+++ b/resume.html
@@ -171,17 +171,30 @@
             <!-- Achivement section -->
             <div class="row mb-4">
                 <div class="col">
-                    <h3>Achivement</h3>
+                    <h3>Achievement</h3>
                     <hr>
                     <ul class="list-unstyled">
                         <li>
                             <h5>Word Camp Nepal 2024</h5>
-                            <p>Achieved Certificate for participating in Gandaki University International Conference and Word Camp Nepal 2024</p>
+                            <p>Achieved Certificate for participating in Gandaki University International Conference and Word Camp Nepal 2024.</p>
                         </li>
                         <li>
                             <h5>1st Runner Up, Hult Prize Gandaki University 23-24</h5>
                             <p>Secured 1st Runner Up in OnCampus Idea Pitching Competition at Hult Prize Gandaki University 23-24.</p>
                         </li>
+                        <li>
+                            <h5>Attendee at GUIC</h5>
+                            <p>Gandaki University International Conference 23-24.</p>
+                        </li>
+                         <li>
+                            <h5>Attendee at GCES Expo</h5>
+                            <p>Gces expo 23.</p>
+                        </li>
+                         <li>
+                            <h5>Secretary at Gandaki University Festive Fest</h5>
+                            <p>Served Gandaki Music Fest as a Secretary at 2024</p>
+                        </li>
+                        
                     </ul>
                 </div>
             </div>
@@ -193,7 +206,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
                     <h5>Jerusha Lamsal</h5>
-                    <p> Hi, I'm Jerusha Lamsal, a UI/UX Designer from Pokhara, Nepal. I specialize in developing and
+                    <p> Hi, I'm Jerusha Lamsal, a UI/UX Designer and QA Engineer from Pokhara, Nepal. I specialize in developing and
                         designing, with a strong focus on learning new technologies and effective management. I excel in
                         researching innovative solutions and enjoy collaborative team environments.</p>
                 </div>
@@ -226,7 +239,7 @@
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script>
         var typingEffect = new Typed(".multiText", {
-            strings: ["front-end developer", "coder", "designer", "UI/UX Designer"],
+            strings: ["Front-End Developer", "QA Enigineer", "UI/UX Designer"],
             loop: true,
             typeSpeed: 100,
             backSpeed: 80,
