--- a/about.html
+++ b/about.html
@@ -115,8 +115,8 @@
                     <h5>Contact</h5>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-map-marker"></i> Address: Pokhara, Kaski, Nepal, 33700</li>
-                        <li><i class="fa fa-phone"></i> Phone: 9868000000</li>
-                        <li><i class="fa fa-envelope"></i> Email: jerusha@gmail.com</li>
+                        <li><i class="fa fa-phone"></i> Phone: 98********</li>
+                        <li><i class="fa fa-envelope"></i> Email: jerushalamsal1@gmail.com</li>
                     </ul>
                 </div>
             </div>
